1.2
- changed positioning calculations (addresses: #147, #142, #138, #137, #127, #126, #119?? )
- added 'positionHow' option (addresses: #138, #137)
- added external 'close' function that can be called to close the pop-up (#137)
- added 'explicitClose' option (#129)
- fixed 'firstItemChecksAll' if only the first item is initially checked (#133)

1.1
- updated jquery to 1.4.2, ui to 1.8.4 (which fixes the 'destroy' problem: #94, #114, #115, #121)
- if firstItemChecksAll is true and all items EXCEPT the first are checked, then autocheck the first (#62)
- treat maxDropHeight as a 'max', not as 'fixed' (#77)
- include simple vertical alignment css to try to address field positioning (#110)
- various key issues (#84)
  NOTE my approach for handling tabout via blur processing fails in IE7+ and Chrome due to loss of
  	   focus when user clicks in scrollbar.  blur processing has been disabled for now.
- assign ids to the generated elements for access by other jQuery processing, and keep the various ids
  unique (#97, #107, #111)
- copy the tabindex of the underlying select if provided (#100)
- provide option to auto-close dropdown when a singleton radio button is clicked (#57, #120)
- if optgroup is disabled, all child items are disabled (#72)
- optgroup without a label (#59)
- 'refresh' function to resynch with selected and disabled state of underlying <select> items (#99,#116,#121)
- 'version' function to identify DDCL version number

1.0
- rework CSS tagging to utilize jQuery ThemeRoller settings
- added onComplete callback option (blur does not fire)
- added forceMultiple option (known restriction for IE6)
- added icon option (ThemeRoller based)
- explicit open/close rather than toggle to keep dropdown state correct
- limited use of inline-block (known cross-browser issues)
- try/catch to protect against callback failures
- various cleanup to suppress cross-talk between multiple dropdowns on same page